# study-core

./: .eslintrc.yml  .gitignore  .prettierignore  .yarnrc.yml  README.md  archive_git.sh  nx.json  package.json  prettierrc.yml  pyproject.toml  test.csv  tsconfig.base.json
intel-edge-academy-6/prototypes/python-study/: pyproject.toml
intel-edge-academy-6/prototypes/python-study/camera_filter_app/: filters.py  sendver.py
intel-edge-academy-6/prototypes/python-study/camera_filter_app/config/: app_config.py  paths.py
intel-edge-academy-6/prototypes/python-study/python_study/: __init__.py  crawling_toc.py  hello.py  main.py  mini_project.py  numpy_study.py
outdated/flask_apps/: pyproject.toml
outdated/flask_apps/mysite/: config.py  database.py  models.py
outdated/flask_apps/mysite/controller/admin/: index.py  ml.py  user.py
outdated/flask_apps/mysite/controller/stream/: streaming.py
outdated/flask_apps/mysite/local_install/: tensorflow_api.py
outdated/flask_apps/mysite/ml/: _fail_multiple_linear.py  cifar_10.py  uci_wine_red.py
outdated/flask_apps/mysite/server/: celery_factory.py  celery_tasks.py  celery_worker.py  websocket.py
outdated/flask_apps/mysite/service/: video.py
outdated/flask_apps/mysite/service/command/: creating_log.py  holidays_in_south_korea.py  image_processing.py  video_processing.py
outdated/flask_apps/mysite/static/: users.txt
outdated/flask_apps/mysite/templates/: error.html  hello.html
outdated/flask_apps/mysite/templates/admin/: index.html
outdated/flask_apps/mysite/templates/admin/ml/: cnn.html  linear.html
outdated/flask_apps/mysite/templates/admin/user/: index.html
outdated/flask_apps/mysite/templates/stream/: websocket_index.html
outdated/flask_apps/mysite/templates/tutorial/: base.html
outdated/flask_apps/mysite/templates/tutorial/auth/: register.html
outdated/flask_apps/mysite/tests/: test.py
outdated/flask_apps/mysite/tests/tutorial/: conftest.py  test.py  test_auth.py  test_blog.py  test_db.py
outdated/flask_apps/tutorial/flask/: auth.py  blog.py  db.py
outdated/flask_apps/tutorial/tensorflow/for_tensorflow/_guide/basics/: automatic_differentiation.py  eager_execution.py  intro_to_graphs_and_functions.py  tensor.py  training_loops.py
outdated/flask_apps/tutorial/tensorflow/for_tensorflow/_guide/data_input_pipelines/: tf_data.py
outdated/flask_apps/tutorial/tensorflow/for_tensorflow/_guide/estimators/: estimator_overview.py
outdated/flask_apps/tutorial/tensorflow/for_tensorflow/_guide/keras/: save_and_load_keras_models.py  (+1 more)
outdated/flask_apps/tutorial/tensorflow/for_tensorflow/beginner/: tfrecord_and_tf_example.py
outdated/flask_apps/tutorial/tensorflow/for_tensorflow/git_object_detection_api/: function_collection.py  object_detection_api.py
prototypes/: README.md  copy_of_architecture_example_microservices.md  pyproject.toml
prototypes/_initialization/: settings-user.jsonc
prototypes/_initialization/ubuntu/: init_in_fish.fish
prototypes/_initialization/ubuntu/howto/: migrate-apt-key-to-keyring.fish  poetry_install_requirements.fish
prototypes/_initialization/windows/: ssh_config
prototypes/_initialization/wsl/: init_in_bash.sh  init_in_fish.fish
prototypes/_organized_note/: _order_of_math_study.md  about_dimensions.tex  about_matrix.tex  about_vector.tex  derivative.tex
prototypes/_organized_note/dimensions/: dimension.tex  tensor.tex
prototypes/_organized_note/markdowns/: automotive_embedded_systems.md  git_revert.md
prototypes/_organized_note/matrix/: inverse_matrix.tex  matrix.tex  transpose_matrix.tex  unit_matrix.tex
prototypes/_organized_note/vector/: linear_algebra-basis.tex  unit_vector.tex  vector-cross_product.tex  vector-dot_product.tex  vector-normal.tex  vector-projection.tex
prototypes/artfiacts/camera_filter_app/: 1-usecase_diagram.md  2-activity_diagram.md  3-sequence-diagram.md  4-state_diagram.md  5-class_diagram.md
prototypes/cpp_study/: CMakeLists.txt  conanfile.py  pyproject.toml
prototypes/cpp_study/include/: cpp_study.hpp
prototypes/cpp_study/include/assignment/: Student.hpp
prototypes/cpp_study/init/: add_nmake_path.ps1
prototypes/cpp_study/profiles/: linux_gcc_ninja_debug
prototypes/cpp_study/resource/images/: Thumbs.db
prototypes/cpp_study/src/: brahem.cpp  cpp_study.cpp  main.cpp  temp.cpp
prototypes/cpp_study/src/assignment/: Student.cpp
prototypes/design/FSM/: fan_FSM.md
prototypes/python-study/: pyproject.toml
prototypes/python-study/camera_filter_app/: filters.py  sendver.py
prototypes/python-study/camera_filter_app/config/: __init__.py
prototypes/python-study/camera_filter_app/tests/: test_face_detection_with_camera.py
prototypes/python-study/executables/CNN/: CNN_batch_nobatch_sig.py  CNN_batch_sig.py  CNN_relu.py  transfer_learning.py
prototypes/python-study/executables/vision/: cv2_filter.py
prototypes/python-study/python_study/: math_test.py  numpy_study.py
prototypes/python-study/python_study/openvino_notebooks_from_github/: pose-estimation.ipynb  vision-monodepth.py
prototypes/python-study/tests/: test_me.py
services/e_commerce_service/: docker-compose.yml  pyproject.toml
services/e_commerce_service/devops/diagrams/: deployment.puml
services/e_commerce_service/devops/stages/: 1-plan.md
services/e_commerce_service/docker/: docker-compose-dev.yml  docker-compose-test.yml
services/e_commerce_service/src/backend/tests/: test_sample.py
services/e_commerce_service/src/backend/wbfw109/e_commerce_app/: for_submit.py  temp_ipython.py
services/glossary_service/: pyproject.toml
services/glossary_service/devops/stages/: 1-plan.md  2-create.md  3-verify.md  9-promotion.md
services/glossary_service/src/wbfw109/glossary_app/: pcconfig.py
services/glossary_service/src/wbfw109/glossary_app/glossary_app/: _temp_app.py  glossary_app.py
src/python/wbfw109/outdated/flask_example/: 7zip.sh  _development_setting.sh  manage.py  pylintrc  pyproject.toml  test.py
src/python/wbfw109/outdated/flask_example/backend/: asgi.py  urls.py
src/python/wbfw109/outdated/flask_example/ml_model/: admin.py
(+351 files in other folders)
