# %shell> poetry install --with web,db,vision

[tool.poetry]
name = "cpp-study"
version = "0.1.0"
description = ""
authors = ["wbfw109v2 <wbfw109v2@gmail.com>"]
# packages = [
#     { include= "cpp_study"},
# ]


[tool.poetry.dependencies]
python = "~3.12.0"
conan = "^2.7.0"
cmake = "^3.30.2"
ninja = "^1.11.1.1"


[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
