# %shell> poetry install

[tool.poetry]
name = "wbfw109-e-commerce-service"
version = "0.1.0"
description = ""
authors = ["wbfw109 <wbfw109@gmail.com>"]
packages = [
    { include= "wbfw109/e_commerce_app", from = "src/backend"}
]


[tool.poetry.dependencies]
python = "~3.11, <3.12"
study-core = {path = "../../../study-core", develop = true}
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
black = "*"
bandit = "*"
pylint = "*"
pyclean = "^2.2.0"
autoflake = "^2.0.0"
pydocstringformatter = "^0.7.2"
pyupgrade = "^3.3.1"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-bdd = "*"

[tool.pytest.ini_options]
bdd_features_base_dir = "features/"
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src/backend"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
